--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,8 @@ proptest = { version = "1.6.0", default-features = false, features = ["std"] }
 rand = "0.8.5"
 reqwest = { version = "0.12.12", default-features = false }
 rmp-serde = "1.3.0"
-ruma = { git = "https://github.com/ruma/ruma", rev = "e85e224cef32181029efa106a059d277ecfbe87d", features = [
+ruma = { path = "/home/work/code/ruma/crates/ruma", features = [
+#ruma = { git = "https://github.com/ruma/ruma", rev = "e85e224cef32181029efa106a059d277ecfbe87d", features = [
     "client-api-c",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
