--- a/labs/multiverse/Cargo.toml
+++ b/labs/multiverse/Cargo.toml
@@ -28,6 +28,7 @@ ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 rpassword = "7.4.0"
 serde_json.workspace = true
 strum = { version = "0.27.2", features = ["derive"] }
+textwrap = "0.16"
 throbber-widgets-tui = "0.8.0"
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
@@ -35,6 +36,7 @@ tracing-appender.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tui-framework-experiment = "0.4.0"
 tui-textarea = "0.7.0"
+tui-widget-list = "0.13.2"
 
 [lints]
 workspace = true
