--- a/Cargo.toml
+++ b/Cargo.toml
@@ -192,7 +192,7 @@ lto = false
 async-compat = { git = "https://github.com/element-hq/async-compat", rev = "5a27c8b290f1f1dcfc0c4ec22c464e38528aa591" }
 const_panic = { git = "https://github.com/jplatte/const_panic", rev = "9024a4cb3eac45c1d2d980f17aaee287b17be498" }
 # Needed to fix rotation log issue on Android (https://github.com/tokio-rs/tracing/issues/2937)
-tracing = { git = "https://github.com/element-hq/tracing.git", rev = "5635147b868541d8c13d6f8c9c8558f9ddd29c6c" }
-tracing-core = { git = "https://github.com/element-hq/tracing.git", rev = "5635147b868541d8c13d6f8c9c8558f9ddd29c6c" }
-tracing-subscriber = { git = "https://github.com/element-hq/tracing.git", rev = "5635147b868541d8c13d6f8c9c8558f9ddd29c6c" }
-tracing-appender = { git = "https://github.com/element-hq/tracing.git", rev = "5635147b868541d8c13d6f8c9c8558f9ddd29c6c" }
+tracing = { git = "https://github.com/tokio-rs/tracing.git", rev = "20f5b3d8ba057ca9c4ae00ad30dda3dce8a71c05" }
+tracing-core = { git = "https://github.com/tokio-rs/tracing.git", rev = "20f5b3d8ba057ca9c4ae00ad30dda3dce8a71c05" }
+tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", rev = "20f5b3d8ba057ca9c4ae00ad30dda3dce8a71c05" }
+tracing-appender = { git = "https://github.com/tokio-rs/tracing.git", rev = "20f5b3d8ba057ca9c4ae00ad30dda3dce8a71c05" }
