--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -32,6 +32,7 @@ js-sys.workspace = true
 matrix-sdk-base = { workspace = true, features = ["js"], optional = true }
 matrix-sdk-crypto = { workspace = true, features = ["js"], optional = true }
 matrix-sdk-store-encryption.workspace = true
+rmp-serde.workspace = true
 ruma.workspace = true
 serde.workspace = true
 serde-wasm-bindgen = "0.6.5"
