--- a/bindings/matrix-sdk-crypto-ffi/Cargo.toml
+++ b/bindings/matrix-sdk-crypto-ffi/Cargo.toml
@@ -32,11 +32,11 @@ experimental-encrypted-state-events = [
 [dependencies]
 anyhow.workspace = true
 futures-util.workspace = true
-hmac = "0.12.1"
+hmac.workspace = true
 http.workspace = true
 matrix-sdk-common = { workspace = true, features = ["uniffi"] }
 matrix-sdk-ffi-macros.workspace = true
-pbkdf2 = "0.12.2"
+pbkdf2.workspace = true
 rand.workspace = true
 ruma.workspace = true
 serde.workspace = true
@@ -62,17 +62,17 @@ workspace = true
 features = ["crypto-store"]
 
 [dependencies.tokio]
-version = "1.43.1"
+workspace = true
 default-features = false
 features = ["rt-multi-thread"]
 
 [build-dependencies]
 uniffi = { workspace = true, features = ["build"] }
-vergen = { version = "8.2.5", features = ["build", "git", "gitcl"] }
+vergen = { workspace = true, features = ["build", "git", "gitcl"] }
 
 [dev-dependencies]
 assert_matches2.workspace = true
-tempfile = "3.8.0"
+tempfile.workspace = true
 
 [lints]
 workspace = true
