--- a/examples/emoji_verification/Cargo.toml
+++ b/examples/emoji_verification/Cargo.toml
@@ -14,7 +14,7 @@ test = false
 
 [dependencies]
 anyhow.workspace = true
-clap = { version = "4.0.15", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 futures-util.workspace = true
 # when copy-pasting this, please use a git dependency or make sure that you
 # have copied the example as it was at the time of the release you use.
