--- a/examples/oauth_cli/Cargo.toml
+++ b/examples/oauth_cli/Cargo.toml
@@ -14,7 +14,7 @@ test = false
 
 [dependencies]
 anyhow.workspace = true
-dirs = "6.0.0"
+dirs.workspace = true
 futures-util.workspace = true
 matrix-sdk-ui = { path = "../../crates/matrix-sdk-ui" }
 rand.workspace = true
