--- a/examples/persist_session/Cargo.toml
+++ b/examples/persist_session/Cargo.toml
@@ -14,7 +14,7 @@ test = false
 
 [dependencies]
 anyhow.workspace = true
-dirs = "6.0.0"
+dirs.workspace = true
 # when copy-pasting this, please use a git dependency or make sure that you
 # have copied the example as it was at the time of the release you use.
 matrix-sdk = { path = "../../crates/matrix-sdk" }
