--- a/examples/qr-login/Cargo.toml
+++ b/examples/qr-login/Cargo.toml
@@ -14,11 +14,11 @@ test = false
 
 [dependencies]
 anyhow.workspace = true
-clap = { version = "4.0.15", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 futures-util.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing-subscriber.workspace = true
-url = "2.3.1"
+url.workspace = true
 
 [dependencies.matrix-sdk]
 # when copy-pasting this, please use a git dependency or make sure that you
