--- a/examples/secret_storage/Cargo.toml
+++ b/examples/secret_storage/Cargo.toml
@@ -14,7 +14,7 @@ test = false
 
 [dependencies]
 anyhow.workspace = true
-clap = { version = "4.0.15", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 # when copy-pasting this, please use a git dependency or make sure that you
 # have copied the example as it was at the time of the release you use.
 matrix-sdk = { path = "../../crates/matrix-sdk" }
