--- a/.deny.toml
+++ b/.deny.toml
@@ -17,6 +17,7 @@ version = 2
 allow = [
     "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
+    "CDLA-Permissive-2.0",
     "BSD-2-Clause",
     "BSD-3-Clause",
     "BSL-1.0",
@@ -28,15 +29,6 @@ allow = [
 ]
 exceptions = [
     { allow = ["Unicode-DFS-2016"], crate = "unicode-ident" },
-    { allow = ["CDDL-1.0"], crate = "inferno" },
-    { allow = ["LicenseRef-ring"], crate = "ring" },
-]
-
-[[licenses.clarify]]
-name = "ring"
-expression = "LicenseRef-ring"
-license-files = [
-    { path = "LICENSE", hash = 0xbd0eed23 },
 ]
 
 [bans]
