--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,8 @@ ruma = { version = "0.13.0", features = [
     "unstable-msc4278",
     "unstable-msc4286",
     "unstable-msc4306",
-    "unstable-msc4308"
+    "unstable-msc4308",
+    "unstable-msc4310"
 ] }
 sentry = { version = "0.42.0", default-features = false }
 sentry-tracing = "0.42.0"
