--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ proptest = { version = "1.6.0", default-features = false, features = ["std"] }
 rand = "0.8.5"
 reqwest = { version = "0.12.23", default-features = false }
 rmp-serde = "1.3.0"
-ruma = { git = "https://github.com/ruma/ruma", rev = "51fb51a560027fd330b43398a278922cacbc825c", features = [
+ruma = { version = "0.13.0", features = [
     "client-api-c",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
