chore: Disable releases for the matrix-sdk-test-utils crate
The crate is only used as a dev dependency, as such we don't need to
release it.

--- a/testing/matrix-sdk-test-utils/Cargo.toml
+++ b/testing/matrix-sdk-test-utils/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 rust-version.workspace = true
 
 [package.metadata.release]
-release = true
+release = false
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 ctor = "0.2.9"
