--- a/testing/matrix-sdk-test-utils/Cargo.toml
+++ b/testing/matrix-sdk-test-utils/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 rust-version.workspace = true
 
 [package.metadata.release]
-release = false
+release = true
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 ctor = "0.2.9"
