test(base): Add a proptest to validate our normalize_power_level method

--- a/crates/matrix-sdk-base/Cargo.toml
+++ b/crates/matrix-sdk-base/Cargo.toml
@@ -107,6 +107,7 @@ futures-executor.workspace = true
 http.workspace = true
 matrix-sdk-test.workspace = true
 matrix-sdk-test-utils.workspace = true
+proptest.workspace = true
 similar-asserts.workspace = true
 stream_assert.workspace = true
 
