--- a/crates/matrix-sdk-base/Cargo.toml
+++ b/crates/matrix-sdk-base/Cargo.toml
@@ -65,6 +65,8 @@ testing = [
 # Add support for inline media galleries via msgtypes
 unstable-msc4274 = []
 
+element-recent-emojis = []
+
 [dependencies]
 as_variant.workspace = true
 assert_matches = { workspace = true, optional = true }
