--- a/crates/matrix-sdk-base/Cargo.toml
+++ b/crates/matrix-sdk-base/Cargo.toml
@@ -65,7 +65,7 @@ testing = [
 # Add support for inline media galleries via msgtypes
 unstable-msc4274 = []
 
-element-recent-emojis = []
+experimental-element-recent-emojis = []
 
 [dependencies]
 as_variant.workspace = true
