--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ pbkdf2 = { version = "0.12.2" }
 pin-project-lite = "0.2.16"
 proptest = { version = "1.6.0", default-features = false, features = ["std"] }
 rand = "0.8.5"
+regex = "1.11.2"
 reqwest = { version = "0.12.23", default-features = false }
 rmp-serde = "1.3.0"
 ruma = { version = "0.13.0", features = [
