--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,8 @@ rand = "0.8.5"
 regex = "1.11.2"
 reqwest = { version = "0.12.23", default-features = false }
 rmp-serde = "1.3.0"
-ruma = { version = "0.13.0", features = [
+# TODO: revert this before merging
+ruma = { git = "https://github.com/jmartinesp/ruma", rev = "0dac817a7a3b4c08993ab275c47033d8f797a3f3", features = [
     "client-api-c",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
