feat(indexeddb): add experimental encrypted state events feature to quiet warning about using non-existent features in crypto store
Signed-off-by: Michael Goldenberg <m@mgoldenberg.net>

--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -20,6 +20,9 @@ media-store = ["dep:matrix-sdk-base"]
 state-store = ["dep:matrix-sdk-base", "growable-bloom-filter"]
 e2e-encryption = ["dep:matrix-sdk-crypto"]
 testing = ["matrix-sdk-crypto?/testing"]
+experimental-encrypted-state-events = [
+    "matrix-sdk-crypto?/experimental-encrypted-state-events"
+]
 
 [dependencies]
 anyhow.workspace = true
