--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ hkdf = "0.12.4"
 hmac = "0.12.1"
 http = "1.3.1"
 imbl = "6.1.0"
+indexed_db_futures = "0.5.0"
 indexmap = "2.11.0"
 insta = { version = "1.43.1", features = ["json", "redactions"] }
 itertools = "0.14.0"
