--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ rand = "0.8.5"
 regex = "1.11.2"
 reqwest = { version = "0.12.23", default-features = false }
 rmp-serde = "1.3.0"
-ruma = { git = "https://github.com/ruma/ruma", rev = "2f64faeabb85950de27e9829faeb389d2779ac57", features = [
+ruma = { git = "https://github.com/ruma/ruma", rev = "de227ef5c5b2d2ecff89ab021ebe53c5d565577d", features = [
     "client-api-c",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
@@ -85,11 +85,12 @@ ruma = { git = "https://github.com/ruma/ruma", rev = "2f64faeabb85950de27e9829fa
     "unstable-msc4286",
     "unstable-msc4306",
     "unstable-msc4308",
-    "unstable-msc4310"
+    "unstable-msc4310",
+    "unstable-msc4359"
 ] }
 sentry = { version = "0.42.0", default-features = false }
 sentry-tracing = "0.42.0"
-serde = { version = "1.0.219", features = ["rc"] }
+serde = { version = "1.0.221", features = ["rc"] }
 serde_html_form = "0.2.7"
 serde_json = "1.0.143"
 sha2 = "0.10.9"
