--- a/crates/matrix-sdk-search/Cargo.toml
+++ b/crates/matrix-sdk-search/Cargo.toml
@@ -15,19 +15,29 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
 
 [dependencies]
+aes = { version = "0.8.4" }
+byteorder.workspace = true
+ctr = { version = "0.9.2" }
+hmac = { workspace = true, features = ["reset"] }
+hkdf.workspace = true
+matrix-sdk-test = { workspace = true, optional = true }
+pbkdf2.workspace = true
+rand.workspace = true
+sha2.workspace = true
 tantivy = "0.25.0"
+tracing = { workspace = true, features = ["attributes"] }
+thiserror.workspace = true
 ruma = { workspace = true , features = [
     "client-api-c",
     "events",
     "rand",
     "unstable-msc1767"
 ] }
-tracing = { workspace = true, features = ["attributes"] }
-thiserror.workspace = true
-matrix-sdk-test = { workspace = true, optional = true }
+zeroize.workspace = true
 
 [dev-dependencies]
 matrix-sdk-test.workspace = true
+tempfile.workspace = true
 
 [lints]
 workspace = true
