ci: use the latest bnjbvr/cargo-machete action
It's much faster now as it downloads the latest version of the
precompiled binary from Github, and it will use the latest tagged
version of cargo-machete by default.

--- a/.github/workflows/detect-unused-dependencies.yml
+++ b/.github/workflows/detect-unused-dependencies.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
       - name: Machete
-        uses: bnjbvr/cargo-machete@v0.9.1
+        uses: bnjbvr/cargo-machete@cb0995971182a3babbea3f086bf306d5509cac47
