--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -27,6 +27,7 @@ experimental-encrypted-state-events = [
 [dependencies]
 async-trait.workspace = true
 base64.workspace = true
+futures-util.workspace = true
 gloo-utils = { version = "0.2.0", features = ["serde"] }
 growable-bloom-filter = { workspace = true, optional = true }
 hkdf.workspace = true
