--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -25,13 +25,17 @@ experimental-encrypted-state-events = [
 ]
 
 [dependencies]
-anyhow.workspace = true
 async-trait.workspace = true
 base64.workspace = true
 gloo-utils = { version = "0.2.0", features = ["serde"] }
 growable-bloom-filter = { workspace = true, optional = true }
 hkdf.workspace = true
-indexed_db_futures = "0.5.0"
+indexed_db_futures = { workspace = true, features = [
+    "serde",
+    "cursors",
+    "indices",
+    "streams",
+]}
 js-sys.workspace = true
 matrix-sdk-base = { workspace = true, features = ["js"], optional = true }
 matrix-sdk-crypto = { workspace = true, features = ["js"], optional = true }
