--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -50,6 +50,7 @@ sha2.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+uuid = { workspace = true, features = ["js", "serde", "v4"] }
 wasm-bindgen.workspace = true
 web-sys = { workspace = true, features = ["IdbKeyRange"] }
 zeroize.workspace = true
@@ -71,7 +72,6 @@ tracing-subscriber = { workspace = true, features = [
     "registry",
     "tracing-log",
 ] }
-uuid.workspace = true
 wasm-bindgen-test.workspace = true
 web-sys = { workspace = true, features = [
     "IdbKeyRange",
