feat(ffi): Upgrade UniFFI to `v0.30.0`

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -13,6 +13,7 @@ name = "xtask"
 test = false
 
 [dependencies]
+cargo_metadata = "0.19.0"
 camino = "1.0.8"
 clap = { version = "4.0.18", features = ["derive"] }
 fs_extra = "1"
