--- a/bindings/matrix-sdk-ffi/Cargo.toml
+++ b/bindings/matrix-sdk-ffi/Cargo.toml
@@ -89,7 +89,8 @@ oauth2.workspace = true
 [target.'cfg(target_family = "wasm")'.dependencies]
 console_error_panic_hook = "0.1.7"
 tokio = { workspace = true, features = ["sync", "macros"] }
-uniffi.workspace = true
+uniffi = { workspace = true, features = ["wasm-unstable-single-threaded"] }
+futures-executor.workspace = true
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-compat.workspace = true
