misc: Add better default `target-feature` values for Android in ARM64 devices

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,3 +7,7 @@ crates-io = "https://docs.rs/"
 
 [unstable]
 rustdoc-map = true
+
+[target.aarch64-linux-android]
+# These rust flags improve the performance on Android on arm64
+rustflags = ["-C", "target-feature=+neon,+aes,+sha2,+sha3,+pmuv3"]
