--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ rand = "0.8.5"
 regex = "1.11.2"
 reqwest = { version = "0.12.23", default-features = false }
 rmp-serde = "1.3.0"
-ruma = { git = "https://github.com/ruma/ruma", rev = "91424b1fcb6642e1a579043a308fb326dd346860", features = [
+ruma = { version = "0.14.0", features = [
     "client-api-c",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
