--- a/labs/multiverse/Cargo.toml
+++ b/labs/multiverse/Cargo.toml
@@ -13,7 +13,7 @@ name = "multiverse"
 test = false
 
 [dependencies]
-clap = { version = "4.0.46", features = ["derive", "env"] }
+clap = { workspace = true, features = ["derive", "env"] }
 color-eyre = "0.6.5"
 crossterm = "0.28.1"
 futures-util.workspace = true
@@ -28,8 +28,8 @@ ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 rpassword = "7.4.0"
 serde_json.workspace = true
 strum = { version = "0.27.2", features = ["derive"] }
-textwrap = "0.16"
-throbber-widgets-tui = "0.8.0"
+textwrap = "0.16.2"
+throbber-widgets-tui = "0.9.0"
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-appender.workspace = true
