--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ assert_matches2 = "0.1.2"
 async-compat = "0.2.5"
 async-rx = "0.1.3"
 # Bumping this to 0.3.6 produces a test failure because the semantic between the
-# versions changed subtly.
+# versions changed subtly: https://github.com/matrix-org/matrix-rust-sdk/issues/4599
 async-stream = "0.3.5"
 async-trait = "0.1.89"
 base64 = "0.22.1"
