--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -22,6 +22,63 @@ jobs:
           - room_list
 
     steps:
+      # This CI workflow can run into space issue, so we're cleaning up some
+      # space here.
+      - name: Create some more space
+        run: |
+          echo "Disk space before cleanup"
+          df -h
+
+          cd /opt
+          find . -maxdepth 1 -mindepth 1 '!' -path ./containerd '!' -path ./actionarchivecache '!' -path ./runner '!' -path ./runner-cache -exec rm -rf '{}' ';'
+          rm -rf /opt/hostedtoolcache
+
+          # Get rid of binaries and libs we're not interested in.
+          sudo rm -rf \
+            /usr/local/julia* \
+            /usr/local/aws*
+
+          sudo rm -rf \
+            /usr/local/bin/minikube \
+            /usr/local/bin/node \
+            /usr/local/bin/stack \
+            /usr/local/bin/bicep \
+            /usr/local/bin/pulumi* \
+            /usr/local/bin/helm \
+            /usr/local/bin/azcopy \
+            /usr/local/bin/packer \
+            /usr/local/bin/cmake-gui \
+            /usr/local/bin/cpack
+
+          sudo rm -rf \
+            /usr/local/share/powershell \
+            /usr/local/share/chromium
+
+          sudo rm -rf /usr/local/lib/android
+
+          echo "::group::/usr/local/bin/*"
+          du -hsc /usr/local/bin/* | sort -h
+          echo "::endgroup::"
+
+          echo "::group::/usr/local/share/*"
+          du -hsc /usr/local/share/* | sort -h
+          echo "::endgroup::"
+
+          echo "::group::/usr/local/*"
+          du -hsc /usr/local/* | sort -h
+          echo "::endgroup::"
+
+          echo "::group::/usr/local/lib/*"
+          du -hsc /usr/local/lib/* | sort -h
+          echo "::endgroup::"
+
+          echo "::group::/opt/*"
+          du -hsc /opt/* | sort -h
+          echo "::endgroup::"
+
+          echo "Disk space after cleanup"
+          df -h
+
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
 
       - name: Setup rust toolchain, cache and cargo-codspeed binary
