chore: Use our own fork of `indexed-db-futures`.
This patch uses our own fork of `indexed-db-futures`: `matrix-indexed-db-futures`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ hkdf = "0.12.4"
 hmac = "0.12.1"
 http = "1.3.1"
 imbl = "6.1.0"
-indexed_db_futures = "0.6.4"
+indexed_db_futures = { version = "0.7.0", package = "matrix_indexed_db_futures" }
 indexmap = "2.12.1"
 insta = { version = "1.44.1", features = ["json", "redactions"] }
 itertools = "0.14.0"
@@ -201,7 +201,6 @@ lto = false
 [patch.crates-io]
 async-compat = { git = "https://github.com/element-hq/async-compat", rev = "5a27c8b290f1f1dcfc0c4ec22c464e38528aa591" }
 const_panic = { git = "https://github.com/jplatte/const_panic", rev = "9024a4cb3eac45c1d2d980f17aaee287b17be498" }
-indexed_db_futures = { git = "https://github.com/matrix-org/rust-indexed-db", rev = "201caac274e38756c6e523ba7cf84ffb625b7c48" }
 # Needed to fix rotation log issue on Android (https://github.com/tokio-rs/tracing/issues/2937)
 tracing = { git = "https://github.com/tokio-rs/tracing.git", rev = "20f5b3d8ba057ca9c4ae00ad30dda3dce8a71c05" }
 tracing-core = { git = "https://github.com/tokio-rs/tracing.git", rev = "20f5b3d8ba057ca9c4ae00ad30dda3dce8a71c05" }
