--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,8 +105,8 @@ tracing-appender = "0.2.3"
 tracing-core = "0.1.34"
 tracing-subscriber = "0.3.20"
 unicode-normalization = "0.1.25"
-uniffi = { version = "0.30.0" }
-uniffi_bindgen = { version = "0.30.0" }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "870b814" }
+uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs", rev = "870b814" }
 url = "2.5.7"
 uuid = "1.18.1"
 vergen-gitcl = "1.0.8"
