chore: Bump vodozemac

--- a/crates/matrix-sdk-common/Cargo.toml
+++ b/crates/matrix-sdk-common/Cargo.toml
@@ -65,7 +65,8 @@ wasm-bindgen-test.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
 # Enable the JS feature for getrandom.
-getrandom = { workspace = true, default-features = false, features = ["js"] }
+getrandom = { workspace = true, default-features = false, features = ["wasm_js"] }
+getrandom02 = { package = "getrandom", version = "0.2.17", default-features = false, features = ["js"] }
 js-sys.workspace = true
 
 [lints]
