chore(sdk): Replace an `Option<T>` by `OnceCell<T>`.

--- a/crates/matrix-sdk-ui/Cargo.toml
+++ b/crates/matrix-sdk-ui/Cargo.toml
@@ -36,7 +36,7 @@ experimental-encrypted-state-events = [
 as_variant.workspace = true
 async-rx.workspace = true
 async-stream.workspace = true
-async_cell = "0.2.3"
+async_cell.workspace = true
 bitflags.workspace = true
 chrono.workspace = true
 eyeball.workspace = true
