--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ as_variant = "1.3.0"
 assert-json-diff = "2.0.2"
 assert_matches = "1.5.0"
 assert_matches2 = "0.1.2"
+async_cell = "0.2.3"
 async-compat = "0.2.5"
+async-once-cell = "0.5.4"
 async-rx = "0.1.3"
 # Bumping this to 0.3.6 produces a test failure because the semantic between the
 # versions changed subtly: https://github.com/matrix-org/matrix-rust-sdk/issues/4599
