--- a/crates/matrix-sdk/Cargo.toml
+++ b/crates/matrix-sdk/Cargo.toml
@@ -86,6 +86,7 @@ assert_matches2 = { workspace = true, optional = true }
 async-channel = "2.5.0"
 async-stream.workspace = true
 async-trait.workspace = true
+async-once-cell.workspace = true
 axum = { version = "0.8.4", optional = true }
 bytes = "1.11.0"
 bytesize = "2.3.0"
