feat(xtask): Introduce `xtask log sync` to visualise logs about sync.
This patch introduces a new family of commands: `xtask log`. The goal
is to manipulate logs, to extract the right amount of data we need to
solve specific problems. The first member of this family is `sync` to
visualise logs about the sync process. It presents the sync requests and
responses in a table, with a "timeline" _à la_ network profiler graph.
The code is rather simple, on purpose. The generated HTML reports are
lightweight, and fully standalone: no JavaScript, pure HTML and CSS, no
external resources. These reports can be shared or archived super
easily.

Features:

- requests/responses are grouped by connection ID
- permalink to specific request ID
- status have colours
- time is displayed in a human form
- duration is calculated from the log timestamps
- view syncs in a "tree-like" flavor, a "time graph", super quick to
  spot long requests
- each line can be "opened" to see details, so far only log line numbers
  to get more context manually

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -14,10 +14,13 @@ test = false
 
 [dependencies]
 camino = "1.0.8"
+chrono.workspace = true
 clap = { version = "4.0.18", features = ["derive"] }
 fs_extra = "1"
+indexmap.workspace = true
 regex = "1"
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 uniffi_bindgen.workspace = true
+url.workspace = true
 xshell = "0.2.2"
