Document and expose widget feature for rtc-livekit-join

--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -40,3 +40,4 @@ workspace = true
 v4l2 = ["dep:v4l"]
 e2e-encryption = ["matrix-sdk/e2e-encryption"]
 e2ee-per-participant = ["matrix-sdk-rtc-livekit/crypto", "matrix-sdk/experimental-send-custom-to-device"]
+experimental-widgets = ["matrix-sdk/experimental-widgets"]
