ci: Add `dist` profile
This is intended for reducing the binary size of the SDK distributed in Android/iOS bindings.

Its optimization level is 'binary size', it contains LTO optimizations and by default removes part of the debug info - the rest can be removed later if needed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -188,6 +188,17 @@ debug = 2
 [profile.reldbg]
 inherits = "dbg"
 opt-level = 3
+strip = "debuginfo"
+
+[profile.dist]
+# Use release profile as a base
+inherits = "release"
+# Strip the minimal debug info, while still allowing us to have proper backtraces, but it will affect debuggers
+strip = "debuginfo"
+# Use link time optimizations
+lto = true
+# Use binary size optimization, since this is intended for distributed copies of the SDK
+opt-level = "s"
 
 [profile.profiling]
 inherits = "release"
