refactor: Enable `debug-images` feature for Sentry
This makes it possible to link a Sentry trace to the debug symbols so it can be symbolicated

--- a/bindings/matrix-sdk-ffi/Cargo.toml
+++ b/bindings/matrix-sdk-ffi/Cargo.toml
@@ -95,6 +95,7 @@ sentry = { workspace = true, optional = true, default-features = false, features
   # Most default features enabled otherwise.
   "backtrace",
   "contexts",
+  "debug-images",
   "panic",
   "reqwest",
   "sentry-debug-images",
