chore: Use `default-features = false` for all dependencies.
This patch adds `default-features = false` to all dependencies to avoid
fetching useless dependencies by default.

Numbers:

- `cargo check --workspace --tests` jumpbs from 725 to 715,
- `cargo tree --all-features --edges all --prefix none | rg -v '^$' |
  cut -d' ' -f 1 | sort | uniq | wc -l` jumps from 538 to 529.

--- a/crates/matrix-sdk-ui/Cargo.toml
+++ b/crates/matrix-sdk-ui/Cargo.toml
@@ -34,7 +34,7 @@ experimental-encrypted-state-events = [
 
 [dependencies]
 as_variant.workspace = true
-async-rx.workspace = true
+async-rx = { workspace = true, features = ["alloc"] }
 async-stream.workspace = true
 async_cell.workspace = true
 bitflags.workspace = true
